# vortex-ecmwf

./: .gitignore  .project  CONTRIBUTING.md  pyproject.toml
.github/workflows/: ci.yaml
sphinx/: InstallDirectory.xmind  Makefile  conf.py  index.rst  tododoc.rst
src/ecmwf/: __init__.py
src/ecmwf/data/: __init__.py  providers.py  stores.py
src/ecmwf/tools/: __init__.py  addons.py  ecfs.py  ectrans.py  interfaces.py  schedulers.py  storage.py
tests/: test_ecmwf_interface.py
